--- a/app/assets/stylesheets/blocks/_navs.scss
+++ b/app/assets/stylesheets/blocks/_navs.scss
@@ -1,19 +1,23 @@
 @use '../variables/colours' as *;
+@use '../dmpopidor/colours' as *;
 // Native HTML5 nav support
 
 /* Hide sub-menus by default */
 nav ul ul {
   display: none;
 }
+
 /* Display sub-menu when user hovers over item */
-nav ul li:hover > ul {
+nav ul li:hover>ul {
   display: block;
 }
+
 nav ul:after {
   content: "";
   clear: both;
   display: block;
 }
+
 nav ul {
   list-style: none;
 }
@@ -22,41 +26,122 @@ nav ul {
 // Overrides Bootstrap 3.0's nav-tabs
 
 /* nav-tabs and nav-pills styling */
-.nav-tabs, .nav-pills {
+.nav-tabs,
+.nav-pills {
   background-color: $color-primary-background;
   color: $color-primary-text;
   border-bottom: 0px;
 }
-.nav-tabs > li > a, .nav-pills > li > a {
+
+.nav-tabs>li>a,
+.nav-pills>li>a {
   color: $color-primary-text;
 }
-.nav-tabs > li > a:hover,
-.nav-tabs > li > a:focus,
-.nav-tabs > li > a.active,
-.nav-tabs > li > a.active:focus,
-.nav-tabs > li > a.active:hover {
+
+.nav-tabs>li>a:hover,
+.nav-tabs>li>a:focus,
+.nav-tabs>li>a.active,
+.nav-tabs>li>a.active:focus,
+.nav-tabs>li>a.active:hover {
   background-color: $color-secondary-background;
   color: $color-secondary-text;
   border: 1px solid $color-border-default;
-  border-bottom-color: transparent; /* Only nav-tabs have a transparent border-bottom */
+  border-bottom-color: transparent;
+  /* Only nav-tabs have a transparent border-bottom */
 }
-.nav-pills > li > a:hover,
-.nav-pills > li > a:focus,
-.nav-pills > li > a.active,
-.nav-pills > li > a:focus.active,
-.nav-pills > li > a:hover.active {
+
+.nav-pills>li>a:hover,
+.nav-pills>li>a:focus,
+.nav-pills>li>a.active,
+.nav-pills>li>a:focus.active,
+.nav-pills>li>a:hover.active {
   background-color: $color-secondary-background;
   color: $color-secondary-text;
   border: 1px solid $color-border-default;
 }
-.nav-pills > li:last-child > a:hover,
-.nav-pills > li:last-child > a:focus,
-.nav-pills > li:last-child > a.active,
-.nav-pills > li:last-child > a.active:focus,
-.nav-pills > li:last-child > a.active:hover {
+
+.nav-pills>li:last-child>a:hover,
+.nav-pills>li:last-child>a:focus,
+.nav-pills>li:last-child>a.active,
+.nav-pills>li:last-child>a.active:focus,
+.nav-pills>li:last-child>a.active:hover {
   border-right: 0px;
 }
-.nav-tabs > li > a,
-.nav-pills > li > a {
+
+.nav-tabs>li>a,
+.nav-pills>li>a {
   border-radius: 0px;
+}
+
+.dropdown-menu {
+  position: relative;
+  top: unset;
+  left: unset;
+  z-index: unset;
+  float: unset;
+  min-width: unset;
+  padding: 5px 0;
+  margin: unset;
+  text-align: unset;
+  background-clip: unset;
+  box-shadow: unset;
+}
+
+@media (min-width: 768px) {
+
+  .navbar-default .navbar-nav>.open>a,
+  .navbar-default .navbar-nav>.open>a:hover,
+  .navbar-default .navbar-nav>.open>a:focus {
+    color: $dark-blue !important;
+    background-color: $white !important;
+  }
+}
+
+@media (max-width: 767px) {
+  nav {
+    ul li:hover>ul {
+      display: none;
+    }
+
+    li.delimiter {
+      display: none;
+    }
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu>li>a {
+    color: $dark-blue !important;
+    text-align: center;
+
+    &:hover {
+      font-weight: bold;
+    }
+  }
+
+  .navbar-default .navbar-nav>.open>a,
+  .navbar-default .navbar-nav>.open>a:hover,
+  .navbar-default .navbar-nav>.open>a:focus {
+    color: $dark-blue !important;
+    background-color: $white !important;
+  }
+
+  .navbar-default .navbar-nav .open .dropdown-menu>.active>a,
+  .navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus {
+    color: $white !important;
+    background-color: $dark-blue !important;
+  }
+
+  .navbar-default .navbar-nav>li>a:hover,
+  .navbar-default .navbar-nav>li>a:focus {
+    color: $dark-blue !important;
+  }
+
+  .navbar-default .navbar-nav>li>a {
+    color: $dark-blue !important;
+    text-decoration: none;
+  }
+
+  .navbar-collapse li {
+    text-align: center;
+  }
 }
