--- a/app/assets/stylesheets/dmpopidor/_footer.scss
+++ b/app/assets/stylesheets/dmpopidor/_footer.scss
@@ -7,7 +7,6 @@
 
   bottom: 0;
   width: 100%;
-  padding: 20px 40px;
   color: $white;
   background-color: $dark-blue;
 
@@ -16,6 +15,10 @@
   a:focus,
   a:visited {
     color: $white;
+  }
+
+  img[|alt="DMP OPIDoR logo"] {
+    margin: 15px auto;
   }
 
   img {
@@ -29,18 +32,21 @@
     display: flex;
     font-size: large;
     padding-bottom: 10px;
-    max-width: 1440px;
   }
 
   .footer-content {
     display: flex;
+    max-width: 1440px;
+    padding: 20px 40px;
 
     .footer-col {
       flex: 1;
-      align-items: center;
+      align-items: left;
       display: flex;
       flex-direction: column;
       margin-bottom: 10px;
+      padding-right: 5%;
+      padding-left: 5%;
 
       .footer-col-title {
         font-weight: bold;
@@ -54,9 +60,27 @@
           display: block;
         }
       }
+
+      &:first-of-type {
+        img {
+          margin-bottom: 20px;
+        }
+
+        span {
+          text-align: justify;
+        }
+      }
+
+      &:not(:first-of-type) {
+        span {
+          text-align: left;
+          margin: auto;
+          width: 100%;
+        }
+      }
     }
 
-    @media (max-width: 1024px) {
+    @media (max-width: 1260px) {
       flex-wrap: wrap;
 
       .footer-col {
@@ -71,14 +95,39 @@
 
   .footer-cc {
     .footer-infos {
-      flex: 2;
       align-items: center;
       display: flex;
+      width: max-content;
     }
 
     .footer-sn {
-      flex: 1;
       font-size: 30px;
+
+      img {
+        &:nth-of-type(1) {
+          height: 50px;
+        }
+      }
+
+      width: max-content;
+    }
+  }
+
+  div span a {
+    width: max-content;
+  }
+}
+
+@media (max-width: 1260px) {
+  #dmpopidor-footer {
+    .footer-content {
+      .footer-col {
+        span {
+          &:first-of-type {
+            text-align: center;
+          }
+        }
+      }
     }
   }
 }
