--- a/app/assets/stylesheets/dmpopidor/_header.scss
+++ b/app/assets/stylesheets/dmpopidor/_header.scss
@@ -5,6 +5,10 @@ header.dmpopidor-branding {
   display: flex;
   flex-direction: column;
 
+  background: url(/assets/header_banner-9adcc3e6271ece03fbd7a4733e275e6c4006e4abba41283ca2fbdac252ac9939.png) no-repeat top fixed;
+  background-size: cover;
+  position: relative;
+
   // #####################################################
   // NAVIGATION
   // #####################################################
@@ -13,36 +17,47 @@ header.dmpopidor-branding {
   .main-nav {
     display: flex;
     justify-content: center;
-    background-color: $white;
-    min-height: 100px;
+    background: transparent;
+    height: 80px;
+    align-items: center;
+    align-self: center;
     width: 100%;
-
+    transition: all .1s ease-in;
     position: fixed;
     top: 0;
     z-index: 10;
 
     #app-navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       width: 100%;
-      max-width: 1440px;
-
+      margin: 0 auto;
       color: $dark-blue;
-
+      background: white;
+      position: absolute;
+      top: 0;
+      border-radius: 0;
 
       .header-logo {
 
-        // margin-right: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto 0;
+
+
+        img {
+          margin: auto;
+        }
+
         .app-logo {
-          height: 75px;
+          height: 48px;
         }
       }
 
       .navbar-content {
         display: flex;
         flex-grow: 1;
-        justify-content: space-between;
+        height: 100%;
+        justify-content: space-around;
       }
 
       .header-links,
@@ -50,7 +65,7 @@ header.dmpopidor-branding {
         min-height: 75px;
         display: flex;
         align-items: center;
-        font-size: 20px;
+        font-size: 1em;
         text-transform: uppercase;
         @include dmpopidor-dropdown;
 
@@ -59,20 +74,134 @@ header.dmpopidor-branding {
         }
       }
 
-      .header-language-account {
-        #signin-signout {
+      ul.header-language-account {
+        li#signin-signout {
           &>a {
-            border-radius: 15px;
-            color: $white;
-            background-color: $dark-blue;
+            border-radius: 5px;
+            color: $dark-blue;
+            background-color: none;
+
+            &:hover,
+            &:focus {
+              color: $dark-blue;
+              background-color: none;
+            }
+          }
+
+          a#user-menu.dropdown-toggle {
+            &:hover {
+              border-radius: 5px 5px 0 0;
+              z-index: 9999;
+              position: relative;
+            }
+          }
+
+          div.sign-in {
+            display: none;
+            position: absolute;
+            height: 100%;
+            min-width: max-content;
+            box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px;
+            text-transform: none;
+            top: 50px;
+            right: -5px;
+            z-index: 1;
+
+            &:hover,
+            &:focus-within {
+              display: block;
+            }
+
+            div div div.panel {
+              box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 5px;
+            }
+          }
+
+          &:hover {
+            div:not(.dropdown-menu) {
+              display: block;
+            }
+          }
+
+          div {
+            &:hover {
+              +a {
+                border-radius: 5px 5px 0 0;
+              }
+            }
+          }
+
+          a:not(.institution-login):not([href="/users/password/new"]) {
+            &:hover {
+              border-radius: 5px 5px 0 0;
+            }
+          }
+
+          ul.dropdown-menu {
+            &:hover {
+              +a#user-menu {
+                border-radius: 5px 5px 0 0;
+              }
+            }
           }
         }
+
         &>li.active {
           font-weight: bold;
         }
+
+        li {
+          &:first-of-type {
+            ul {
+              top: 54px;
+            }
+          }
+
+          a:not(.institution-login):not([href="/users/password/new"]) {
+            color: $dark-blue;
+          }
+
+          ul {
+            padding: 0;
+
+            &:hover,
+            &:focus {
+              +a {
+                .fa.fa-chevron-down {
+                  transform: rotate(180deg);
+                }
+              }
+            }
+
+            li {
+              a {
+                margin: 0 !important;
+              }
+
+              &.divider {
+                margin: 0;
+              }
+            }
+          }
+        }
       }
 
+      div.navbar-header {
+        a img {
+          width: 70px;
+        }
+      }
 
+      @media (min-width: 768px) {
+        display: flex;
+        align-items: center;
+        height: inherit;
+
+        div.navbar-header a img {
+          width: 170px;
+          height: auto !important;
+        }
+      }
     }
   }
 
@@ -98,7 +227,7 @@ header.dmpopidor-branding {
     width: 100%;
     max-width: 1440px;
     min-height: 500px;
-    padding: 150px 50px 100px 50px;
+    padding: 0 50px 0 50px;
     z-index: 1;
     opacity: 0.9;
 
@@ -109,59 +238,70 @@ header.dmpopidor-branding {
     .org-branding {
       display: flex;
       flex-direction: column;
+      height: min-content;
 
       #org-navbar {
         margin-top: auto;
-        padding: 30px;
         width: 100%;
         border-radius: 15px;
-  
+        height: inherit;
+
         .org-infos {
           display: flex;
+          height: inherit;
+          padding: 20px;
+
           .org-logo {
             flex: 1;
+            height: inherit;
+
             &.no-logo {
               font-size: xx-large;
               color: $dark-blue;
               text-align: center;
-              padding: 15px;
-              font-family: "Times New Roman";
+              font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             }
           }
-  
+
           .org-links-area {
             flex: 2;
             font-size: large;
+            height: inherit;
+
             .org-a {
               padding: 0 15px;
             }
+
             a {
               color: $dark-blue;
             }
           }
         }
-  
+
         .org-banner-text {
           font-size: large;
           padding-top: 5px;
+
           a {
             color: black;
             text-decoration: underline;
           }
-  
+
           &.org-deactivated {
             color: $rust;
             margin: auto;
             font-weight: 600;
           }
-  
+
         }
       }
+
       .homepage-h1 {
         color: white;
         font-size: 60px;
         font-weight: bold;
       }
+
       .homepage-h2 {
         color: white;
         width: 75%;
@@ -197,6 +337,7 @@ header.dmpopidor-branding {
           text-decoration: underline;
         }
       }
+
       &.alert-danger {
         background-color: $rust;
         color: white;
@@ -209,8 +350,16 @@ header.dmpopidor-branding {
     }
 
     #notification-area {
-      margin-top: auto;
+      margin-top: 20px;
     }
   }
 
+}
+
+.is-scrolled {
+  header.dmpopidor-branding {
+    div.main-nav {
+      height: 60px;
+    }
+  }
 }
