--- a/app/views/branded/static_pages/news_feed.html.erb
+++ b/app/views/branded/static_pages/news_feed.html.erb
@@ -2,7 +2,7 @@
 
 <div class="dmp_details_body static_page_content news_page">
   <h2>
-    <%= _('Latest news'	)%> &#x25cf;
+    <%= _('Latest news'	)%>
   </h2>
   <dmp-news-page/>
 </div>
