refactor: removing points next to page titles

--- a/app/views/branded/plans/index.html.erb
+++ b/app/views/branded/plans/index.html.erb
@@ -1,6 +1,6 @@
 <% title _('My Dashboard') %>
 <div class="row col-md-12">
-  <h1><%= _('My Dashboard') %> &#x25cf;</h1>
+  <h1><%= _('My Dashboard') %></h1>
   <!-- if the user has projects -->
   <p>
     <% if @plans.count > 0 %>
