--- a/app/views/branded/public_pages/plan_index.html.erb
+++ b/app/views/branded/public_pages/plan_index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1>
-      <%= _('Public DMPs') %> &#x25cf;
+      <%= _('Public DMPs') %>
     </h1>
     <!-- if the user has projects -->
     <% if @plans.count > 0 %>
