--- a/app/views/branded/static/static_pages/show.html.erb
+++ b/app/views/branded/static/static_pages/show.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  <%= @static_page.localized_name(session[:locale]).html_safe %> &#x25cf;
+  <%= @static_page.localized_name(session[:locale]).html_safe %>
 </h1>
 
 <div class="dmp_details_body static_page_content">
