--- a/app/views/branded/contact_us/contacts/new.html.erb
+++ b/app/views/branded/contact_us/contacts/new.html.erb
@@ -2,7 +2,7 @@
 <div class="row dmpopidor-contact-us">
   <div class="col-md-12">
     <h1>
-      <%= _("Contact technical support") %> &#x25cf;
+      <%= _("Contact technical support") %>
     </h1>
     <p>
       <%= sanitize _('%{application_name} is provided by the %{organisation_name}.<br /> You can find out more about us on our <a href="%{organisation_url}" title="%{open_in_new_window_text}" target="_blank">website</a>. If you would like to contact us about %{application_name}, please fill out the form below.') % {
