--- a/app/views/branded/devise/registrations/edit.html.erb
+++ b/app/views/branded/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1>
-      <%= _('Edit profile') %> &#x25cf;
+      <%= _('Edit profile') %>
     </h1>
   </div>
 </div>
