--- a/app/views/shared/_access_controls.html.erb
+++ b/app/views/shared/_access_controls.html.erb
@@ -1,31 +1,35 @@
 <div class="sign-in">
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active">
-      <a href="#sign-in-form" role="tab" aria-controls="sign-in-form" data-toggle="tab">
-        <%= _('Sign in') %>
-      </a>
-    </li>
-    <% unless active_page?(new_user_registration_path, true) %>
-      <li role="presentation">
-        <a href="#create-account-form" role="tab" aria-controls="create-account-form" data-toggle="tab">
-          <%= _('Create account') %>
-        </a>
-      </li>
-    <% end %>
-  </ul>
-
+<!--
+  # <ul class="nav nav-tabs" role="tablist">
+  #   <li role="presentation" class="active">
+  #     <a href="#sign-in-form" onclick="document.location='#log-in';return false;" role="tab" aria-controls="sign-in-form" data-toggle="tab">
+  #       <%= _('Sign in') %>
+  #     </a>
+  #   </li>
+  #   <% unless active_page?(new_user_registration_path, true) %>
+  #     <li role="presentation">
+  #       <a href="#create-account-form" onclick="document.location='#register';return false;" role="tab" aria-controls="create-account-form" data-toggle="tab">
+  #         <%= _('Create account') %>
+  #       </a>
+  #     </li>
+  #   <% end %>
+  # </ul>
+-->
   <div class="tab-content">
-    <div id="sign-in-form" role="tabpanel" class="tab-pane active">
+    <div id="sign-in-form" role="tabpanel" class=" active">
       <div class="panel panel-default">
         <div class="panel-body">
+        <h1>Connexion</h1>
           <%= render :partial => 'shared/sign_in_form' %>
         </div>
       </div>
     </div>
+    <button class="btn btn-default" id="create-account-over">Créer un compte ?</button>
     <% unless active_page?(new_user_registration_path, true) %>
-      <div id="create-account-form" role="tabpanel" class="tab-pane">
+      <div id="create-account-form" role="tabpanel">
         <div class="panel panel-default">
           <div class="panel-body">
+          <h1>Inscription</h1>
             <%= render :partial => 'shared/create_account_form', locals: {orgs: orgs, org_partial: org_partial} %>
           </div>
         </div>
