refactor: adding floating window to homepage

--- a/app/views/branded/home/_welcome.html.erb
+++ b/app/views/branded/home/_welcome.html.erb
@@ -1,8 +1,13 @@
 <div class="dmpopidor-front-page">
   <div class="row main-title">
     <h1>
-      <%= _('News') %> &#x25cf;
+      <%= _('News') %>
     </h1>
+    <div class="dmp-visit">
+      <h2>Première visite chez nous ?</h2>
+      <p>Découvrez DMP OPIDoR en 1 min !</p>
+      <i class="fa fa-play-circle" aria-hidden="true"></i>
+    </div>
   </div>
   <div class="row">
     <dmp-homepage-news-page/>
