Issue #3144 - table header and page number pagination sorted
Changes in this commit:
- table header colour customisation (added .table)
- replaced 'pull-right' and pull-left' classes with 'float-end' and
  'float-start' for pagination
- added padding for the page number navigation

--- a/app/views/layouts/_paginable.html.erb
+++ b/app/views/layouts/_paginable.html.erb
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div class="pull-left">
+        <div class="float-start">
           <% if total > Kaminari.config.default_per_page %>
             <% if searchable? %>
                 <ul class="list-inline">
@@ -50,7 +50,7 @@
             <% end %>
           <% end %>
         </div>
-        <div class="pull-right">
+        <div class="float-end">
           <% if paginable? %>
               <%= paginate(scope, params: paginable_params, remote: remote) %>
           <% end %>
