--- a/app/assets/stylesheets/blocks/_tables.scss
+++ b/app/assets/stylesheets/blocks/_tables.scss
@@ -1,11 +1,19 @@
 @use '../variables/colours' as *;
 @use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 // This file contains overrides to the core Bootstrap 3.x styling
-.table { border: 1px solid $color-border-default; }
-.table thead > tr > th { border-bottom: none; }
-.table thead > tr > th, .table tbody > tr > th, .table tfoot > tr > th, .table thead > tr > td, .table tbody > tr > td, .table tfoot > tr > td { border: 1px solid $color-border-default; }
+.table { 
+  border: 1px solid $color-border-default;   
+}
 
-thead th {
+.table thead > tr > th { 
+  border-bottom: none;
+ }
+
+.table thead > tr > th, .table tbody > tr > th, .table tfoot > tr > th, .table thead > tr > td, .table tbody > tr > td, .table tfoot > tr > td { 
+  border: 1px solid $color-border-default; 
+}
+
+.table thead th {
   background-color: $color-border-default;
   color: $color-primary-text;
 }
