--- a/app/assets/stylesheets/dmpopidor/_header.scss
+++ b/app/assets/stylesheets/dmpopidor/_header.scss
@@ -4,7 +4,7 @@
 header.dmpopidor-branding {
   display: flex;
   flex-direction: column;
-
+  padding: 70px 0;
   background: url(/assets/header_banner-9adcc3e6271ece03fbd7a4733e275e6c4006e4abba41283ca2fbdac252ac9939.png) no-repeat top fixed;
   background-size: cover;
   position: relative;
@@ -76,6 +76,8 @@ header.dmpopidor-branding {
 
       ul.header-language-account {
         li#signin-signout {
+          border-radius: 5px;
+
           &>a {
             border-radius: 5px;
             color: $dark-blue;
@@ -144,6 +146,53 @@ header.dmpopidor-branding {
               }
             }
           }
+
+
+          div.dropdown-menu {
+            right: 10px;
+            left: unset !important;
+            top: 50px;
+            border-radius: 5px;
+            z-index: 1;
+
+            &:hover {
+              &+a {
+                &>i.fa.fa-chevron-down {
+                  transform: rotate(180deg);
+                }
+              }
+            }
+          }
+
+          &:hover {
+            div.dropdown-menu {
+              display: grid;
+              justify-content: center;
+              align-items: center;
+              left: -132%;
+              width: max-content;
+              grid-template-rows: repeat(2, 1fr);
+              grid-auto-flow: column;
+              padding: 0;
+
+              div {
+                padding: 10px 0;
+                margin: 0;
+                place-self: flex-start;
+                justify-self: center;
+                width: 100%;
+
+                ul {
+                  display: block;
+                }
+              }
+            }
+          }
+
+
+          ul.dropdown-menu {
+            width: 100%;
+          }
         }
 
         &>li.active {
@@ -153,7 +202,7 @@ header.dmpopidor-branding {
         li {
           &:first-of-type {
             ul {
-              top: 54px;
+              top: 50px;
             }
           }
 
